0.0.2

* Fix issue #1 in `init1`
* Rename functions to have 1 suffix.
* Implement `unsnoc`.
* `_init1` and `_tail1` lenses.
* Remove functions in favour of type-class implementations.
* Reversing instance.

0.0.1

* Initial version.