@@ -3,4 +3,4 @@
 * tests
 * Lazy version of Text
 * Reversing, Plated
-* Cons1, Snoc1, AsSingle
+* Cons1, Snoc1
