@@ -6,6 +6,7 @@
 * `_init1` and `_tail1` lenses.
 * Remove functions in favour of type-class implementations.
 * Reversing instance.
+* AsSingle type-class and instances.
 
 0.0.1
 
